# ironfoil

./: .gitattributes  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  deny.toml  dist-workspace.toml  release.toml
.github/workflows/: ci.yml  release-cli.yml  release-gui.yml  release.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: main.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: lib.rs  network.rs  paths.rs  progress.rs  rcm.rs  usb.rs
core/src/usb/: sphaira.rs  tinfoil.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
desktop/: ironfoil-gui.desktop
gui/: Cargo.toml  build.rs
gui/src/: app.rs  main.rs  tabs.rs
gui/src/tabs/: home.rs  install.rs  rcm.rs
gui/wix/: main.wxs
media/: Justfile  banner-dark.typ  banner-light.typ  demo.tape  download-linux.typ  download-macos.typ  download-windows.typ  lib.typ  repo_card.typ
src/: main.rs
