[workspace]
resolver = "3"
members = [
  "cli",
  "core",
  "gui",
]

[workspace.package]
version = "0.4.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sermuns/ironfoil"
authors = ["sermuns <sermuns@lysator.liu.se>"]

[workspace.dependencies]
log = "0.4"
color-eyre = "0.6"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
walkdir = "2"
percent-encoding = "2.3"
crc32c = "0.6"
nusb = "0.2"
indicatif = "0.18"
clap = "4"
eframe = { version = "0.33", default-features = false }
egui = "0.33"
egui_extras = "0.33"
egui-toast = "0.19"
strum = "0.28"
rfd = "0.17"
humansize = "2"
image = { version = "0.25", default-features = false }
vergen-gitcl = "9"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args.level = "allow"
trivially_copy_pass_by_ref.level = "deny"
items_after_statements = "allow"
cast_possible_truncation = "allow" # i mean we all have 64-bit PCs, right????
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
too_many_arguments = "allow"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = false

[profile.dist]
inherits = "release"
