[package]
name = "ironfoil-core"
description = "Core library for ironfoil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
log.workspace = true
thiserror.workspace = true
walkdir.workspace = true

# network
percent-encoding = { workspace = true, optional = true }

# usb
crc32c = { workspace = true, optional = true }
nusb = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest = "0.26"

[features]
default = ["network", "rcm", "usb"]
network = ["dep:percent-encoding"]
rcm = ["dep:nusb"]
usb = ["dep:crc32c", "dep:nusb", "dep:serde"]
